@@ -1,3 +1,8 @@
+Tue Sep 16 22:09:50 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
+
+	* boot-9.scm (keyword->symbol, display-usage-report): Changed
+ 	length --> string-length.
+
 Mon Sep 15 23:39:54 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
 	* boot-9.scm (iota): Renamed list-reverse! --> reverse!
